@@ -1,100 +1,0 @@
-.\" $Revision$
-.TH CNFSSTAT 8
-.SH NAME
-cnfsstat \- show usage of cycbuffs
-.SH SYNOPSIS
-.B cnfsstat
-[
-.B \-a
-]
-[
-.B \-c CLASS
-]
-[
-.B \-h
-]
-[
-.B \-l
-[
-seconds
-]
-]
-[
-.B \-m BUFFER
-]
-[
-.B \-P
-]
-[
-.B \-p
-]
-[
-.B \-s
-]
-.SH DESCRIPTION
-.I Cnfsstat
-reads
-.I <pathetc in inn.conf>/cycbuff.conf
-and
-.I <pathetc in inn.conf>/storage.conf
-to determine which cycbuffs are available, read the specified cycbuffs, and
-shows their usage status.
-.PP
-.I Cnfsstat
-can be invoked from
-.IR rc.news (8),
-if
-.I <docnfsstat in inn.conf>
-is ``true'', and the result is written to
-.IR syslog (3).
-.SH OPTIONS
-.TP
-.B \-a
-.I Cnfsstat
-prints also the age of the oldest article in the cycbuff.
-.TP
-.B \-c CLASS
-.I Cnfsstat
-prints information only for the specified class.
-.TP
-.B \-h
-.I Cnfsstat
-prints usage information.
-.TP
-.B \-l [ seconds ]
-.I Cnfsstat
-prints a status snapshot every
-.IR seconds ,
-and only exits if there is an error.
-The default interval is 600 seconds.
-.TP
-.B \-m BUFFER
-.I Cnfsstat
-prints information about the specified buffer in a format suitable
-for mrtg.
-.TP
-.B \-P
-.I Cnfsstat
-writes PID into
-.IR <pathrun\ in\ inn.conf>/cnfsstat.pid .
-.TP
-.B \-p
-.I Cnfsstat
-prints an mrtg config file.
-.TP
-.B \-s
-.I Cnfsstat
-writes output to
-.IR syslog (3)
-instead of standard output.
-.SH HISTORY
-Written by Katsuhiro Kondou <kondou@nec.co.jp> for InterNetNews.
-.de R$
-This is revision \\$3, dated \\$4.
-..
-.R$ $Id$
-.SH "SEE ALSO"
-cycbuff.conf(5),
-inn.conf(5),
-rc.news(8),
-storage.conf(5).
